Password input field spacing issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -394,7 +394,7 @@ input:-webkit-autofill {
   align-items: center;
   border: 1px solid #ddd;
   border-radius: 4px;
-  padding: 0 10px;
+  padding-right: 10px;
 }
 
 .input-container input {
